--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,9 +30,9 @@ repos:
         entry: swiftlint --strict
 
   - repo: https://github.com/to-sta/spdx-checker-pre-commit
-    rev: 0.1.5
+    rev: 0.1.7
     hooks:
       - id: spdx-license-checker
         name: run spdx-checker license check
-        args: [-l, GPL-3.0-or-later]
+        args: [-l, GPL-3.0-or-later, --fix, --continue-on-error]
         types_or: [swift]
